--- a/pages/portfolio/parties-profile.html
+++ b/pages/portfolio/parties-profile.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/responsive.css">
+    <!-- <link rel="stylesheet" href="../../assets/css/responsive.css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>minister</title>
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@300;400;500;600;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@300;400;500;600;800;900&display=swap"
+        rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&display=swap"
+        rel="stylesheet">
 </head>
 
 
@@ -41,12 +49,14 @@
             </div>
 
             <div class="topic1">
+
                 <p class="contact"><a href="#">தொடர்பு</a></p>
                 <p class="contact">|</p>
                 <p class="contact"><a href="#">பின்னூட்டம்</a></p>
                 <p><a href="parties-profile.html">English</a></p>
                 <p>|</p>
                 <p><a href="parties-profile.html">தமிழ்</a></p>
+
             </div>
 
         </div>
@@ -54,17 +64,24 @@
         <!-- navbar1 -->
 
         <nav class="navbar navbar-expand-lg">
+
+
             <div class="container-fluid">
+
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item pe-5">
                             <a class="nav-link active" aria-current="page" href="../../index.html">முகப்பு</a>
@@ -72,6 +89,7 @@
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="parties-profile.html">விவரம்</a>
                         </li>
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -83,9 +101,11 @@
                                 <li><a class="dropdown-item" href="../manifesto/complte.html">நிறைவு</a></li>
                             </ul>
                         </li>
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="../passt leaders/past leaders.html">தலைவர்கள்</a>
                         </li>
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -96,21 +116,22 @@
                                 <li><a class="dropdown-item" href="../more/mla.html">பிரதிநிதிகள்</a></li>
 
                             </ul>
+
                         </li>
+
                     </ul>
+
                 </div>
+
             </div>
+
         </nav>
+
     </div>
 
     <!-- start with politics party  -->
 
-    <!-- <nav class="pt-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a class="text-decoration-none text-dark" href="index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Parties</li>
-        </ol>
-      </nav> -->
+
 
     <div class="totalparties">
         <!-- list of multi parties -->
