--- a/pages/portfolio/profile/profile.html
+++ b/pages/portfolio/profile/profile.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../../assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../assets/css/responsive.css">
+    <!-- <link rel="stylesheet" href="../../../assets/css/responsive.css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../../assets/images/icons/p logo.jpg">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>minister</title>
@@ -59,24 +59,36 @@
         <!-- navbar1 -->
 
         <nav class="navbar navbar-expand-lg">
+
+
             <div class="container-fluid">
+
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
                         <li class="nav-item pe-5">
                             <a class="nav-link active" aria-current="page" href="../../../index.html">முகப்பு</a>
                         </li>
+
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="../../portfolio/parties-profile.html">விவரம்</a>
                         </li>
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -87,9 +99,11 @@
                                 <li><a class="dropdown-item" href="../../manifesto/complte.html">நிறைவு</a></li>
                             </ul>
                         </li>
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="../../passt leaders/past leaders.html">தலைவர்கள்</a>
                         </li>
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -100,15 +114,25 @@
                                 <li><a class="dropdown-item" href="../../more/mla.html">பிரதிநிதிகள்</a></li>
 
                             </ul>
+
+
                         </li>
+
+
                     </ul>
+
+
                 </div>
+
             </div>
+
         </nav>
+
     </div>
 
 
-    <button type="button" class="btn btn-outline-danger ms-2"><a class="text-center text-dark text-decoration-none" href="../potfolio.html">Back</a></button>
+    <button type="button" class="btn btn-outline-danger ms-2"><a class="text-center text-dark text-decoration-none"
+            href="../potfolio.html">Back</a></button>
 
     <!-- profile page start -->
 
