--- a/pages/your opinion/your opnion.html
+++ b/pages/your opinion/your opnion.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/responsive.css">
+    <!-- <link rel="stylesheet" href="../../assets/css/responsive.css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>portfolieo</title>
@@ -31,10 +31,12 @@
     <div class="totalnav">
 
         <div class="headvideo1">
+
             <video autoplay muted loop id="myVideo">
                 <source src="../../assets/images/essecial/Pattern - 85590.mp4" type="video/mp4">
                 <track default />
             </video>
+
         </div>
 
         <!-- navbar -->
@@ -59,24 +61,33 @@
         <!-- navbar1 -->
 
         <nav class="navbar navbar-expand-lg">
+
+
             <div class="container-fluid">
+
+
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item pe-5">
                             <a class="nav-link active" aria-current="page" href="../../index.html">முகப்பு</a>
                         </li>
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="../portfolio/parties-profile.html">விவரம்</a>
                         </li>
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -87,9 +98,11 @@
                                 <li><a class="dropdown-item" href="../manifesto/complte.html">நிறைவு</a></li>
                             </ul>
                         </li>
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="../passt leaders/past leaders.html">தலைவர்கள்</a>
                         </li>
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -101,10 +114,15 @@
 
                             </ul>
                         </li>
+
                     </ul>
+
                 </div>
+
             </div>
+
         </nav>
+
     </div>
 
 
@@ -112,12 +130,20 @@
 
 
     <!-- start opinion quiestion answer page -->
+
+
     <div class="opinionpoll">
+
+
         <form action=""><br><br>
+
+
             <label for=""> POLITICAL YOUR OPINION:</label></br>
+
             <label for="">
                 1. வரும் தேர்தலில் நீங்கள் வாக்களிக்க எவ்வளவு வாய்ப்பு உள்ளது?:
             </label>
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">100%</option>
@@ -130,14 +156,17 @@
             <label for="">
                 2.தேர்ந்தெடுக்கப்பட்ட அதிகாரியை தொடர்பு கொண்டீர்களா?:
             </label><br>
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
             </select> <br>
+
             <label for="">
                 3.எந்த அரசியல் கட்சியை ஆதரிக்கிறீர்கள்?:
             </label><br>
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">DMK</option>
@@ -145,10 +174,12 @@
                 <option value="3">INC</option>
                 <option value="3">BJP</option>
             </select> <br>
+
             <label for="">
                 4. தற்போதைய அரசாங்கம் உங்களுக்காக வேலை செய்யும் என்று நீங்கள் எவ்வளவு நம்புகிறீர்கள்?:
             </label><br>
-            <!-- <input type="text" placeholder="you like this government please mention" required><br> -->
+
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">100%</option>
@@ -157,61 +188,78 @@
                 <option value="3">25%</option>
                 <option value="3">0%</option>
             </select><br>
+
+
             <label for="">
                 5. இட ஒதுக்கீடு என்பது குறைந்த வருமானம் உள்ள குடும்பங்களுக்கு மட்டும் இருக்கக் கூடாது.
             </label><br>
-            <!-- <input type="text" placeholder="Your opnion"><br> -->
+
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
             </select><br>
+
             <label for="">
                 6. நீங்கள் வாக்களிக்க பதிவு செய்துள்ளீர்களா?:
             </label><br>
-            <!-- <input type="text" placeholder="Yes or No"><br> -->
+
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
             </select><br>
+
             <label for="">
                 7. நீங்கள் மற்றவர்களுடன் அரசியலைப் பற்றி பேச வசதியாக இருக்கிறீர்களா?:
             </label><br>
-            <!-- <input type="text" placeholder="like or not like"><br> -->
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Like</option>
                 <option value="2">Not Like</option>
             </select><br>
+
             <label for="">
                 8. அரசாங்கம் சரியானதைச் செய்யும் என்று நம்பலாமா?:
             </label><br>
-            <!-- <input type="text" placeholder="you trust"><br> -->
+
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
             </select><br>
+
             <label for="">
                 9. அரசியல் பேரணி, பேச்சு அல்லது நிகழ்வில் கலந்துகொள்வதா?
             </label><br>
-            <!-- <input type="text" placeholder="give a answer"><br> -->
+
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
             </select><br>
+
             <label for="">
                 உங்கள் கருத்தைச் சேர்க்கவும்
             </label><br>
+
             <input type="text" placeholder="Addition opinion"><br>
-            <!-- <button><a href="../../index.html">Submit</a></button> -->
-            <button type="button" class="text-center btn btn-outline-success btn-lg"><a href="../../index.html">Submit</a></button>
+
+            <button type="button" class="text-center btn btn-outline-success btn-lg"><a
+                    href="../../index.html">Submit</a></button>
+
         </form>
+
+
     </div>
 
     <!-- footer  section-->
+
+
     <div class="footer">
 
         <div class="foot foot2">
