--- a/index.html
+++ b/index.html
@@ -7,30 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
     <link href="assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/responsive.css" type="text/css">
+    <!-- <link rel="stylesheet" href="assets/css/responsive.css" type="text/css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="assets/images/icons/p logo.jpg">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>politifact</title>
 
- 
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@300;400;500;600;800;900&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@300;400;500;600;800;900&display=swap"
+        rel="stylesheet">
 
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&display=swap"
+        rel="stylesheet">
+
+
 </head>
 
 
 <body>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"></script> -->
+
+
     <!-- background vidieo -->
 
     <div class="headvideo">
 
         <video autoplay muted loop id="myVideo">
+
+
             <source src="assets/images/essecial/Flag - 117755.mp4" type="video/mp4">
             <track default>
         </video>
+
+
     </div>
 
     <!-- navbar all -->
@@ -38,10 +50,12 @@
     <div class="totalnav">
 
         <div class="headvideo1">
+
             <video autoplay muted loop id="myVideo">
                 <source src="assets/images/essecial/Pattern - 85590.mp4" type="video/mp4">
                 <track default />
             </video>
+
         </div>
 
         <!-- navbar -->
@@ -49,16 +63,23 @@
         <div class="navbar">
 
             <div class="topic">
+
                 <h1>POLITIFACT</h1>
+
+
             </div>
 
             <div class="topic1">
+
+
                 <p class="contact"><a href="pages/your opinion/join now.html">தொடர்பு</a></p>
                 <p class="contact">|</p>
                 <p class="contact"><a href="pages/your opinion/your opnion.html">பின்னூட்டம்</a></p>
                 <p><a href="English-version/home/homepage-english.html">English</a></p>
                 <p>|</p>
                 <p><a href="index.html">தமிழ்</a></p>
+
+
             </div>
 
         </div>
@@ -66,24 +87,36 @@
         <!-- navbar1 -->
 
         <nav class="navbar navbar-expand-lg">
+
+
             <div class="container-fluid">
+
+
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
                         <li class="nav-item pe-5">
                             <a class="nav-link active" aria-current="page" href="index.html">முகப்பு</a>
                         </li>
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="pages/portfolio/parties-profile.html">விவரம்</a>
                         </li>
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -94,9 +127,11 @@
                                 <li><a class="dropdown-item" href="pages/manifesto/complte.html">நிறைவு</a></li>
                             </ul>
                         </li>
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="pages/passt leaders/past leaders.html">தலைவர்கள்</a>
                         </li>
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -108,18 +143,21 @@
 
                             </ul>
                         </li>
+
+
                     </ul>
+
                 </div>
+
+
             </div>
+
         </nav>
+
     </div>
     <!-- section1 -->
-    <!-- <nav class="position-sticky d-sm-none" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a class="text-decoration-none text-dark" href="index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Library</li>
-        </ol>
-      </nav> -->
+
+
     <div class="section1 container">
 
 
@@ -153,6 +191,7 @@
             <div class="content1 d-flex justify-content-center align-items-center flex-column">
 
                 <h2 class="h1">poltifact</h2>
+
                 <p class="p-3">
                     பரஸ்பர சண்டை சச்சரவுகளைக் களைந்து, உயர்ந்தவர் தாழ்ந்தவர் என்ற வேறுபாட்டைக் களைந்து சமத்துவ
                     உணர்வை
@@ -163,14 +202,22 @@
             </div>
 
             <div class="sideimage">
+
                 <img src="assets/images/essecial/motivation.jpg" class="img-fluid" alt="error image">
+
             </div>
 
         </div>
 
     </div>
+
+
     <!-- section3 -->
+
+
     <div class="section3">
+
+
         <div class="content d-flex flex-column justify-content-center align-items-center p-5">
 
             <p class="h4 fs-5 text-center text-danger fw-bolder lh-base">எங்கள் பிரச்சாரம் இயக்கப்படுகிறது<br>
@@ -190,7 +237,10 @@
                     href="pages/your opinion/join now.html">இப்போது சேரவும்</a></button>
 
         </div>
+
+
         <!-- section4 -->
+
         <div class="section4 d-flex justify-content-between">
 
             <div class="num1">
@@ -234,6 +284,8 @@
         <div class="news d-flex justify-content-around">
 
             <div class="news1">
+
+
                 <img src="assets/images/ministers/news3.jpg" class="img-fluid" alt="error image">
                 <h2>அரசியல்</h2>
                 <p>
@@ -242,6 +294,8 @@
                     எழுப்பியுள்ளார். வாரிசு அரசியல் பற்றிப் பேச பாஜக மாநிலத் தலைவர் அண்ணாமலைக்கு தகுதியே இல்லை,
                     அவரது கட்சியிலேயே பலரது வாரிசுகள் பொறுப்புகளில் இருக்கிறார்கள் என துரை வைகோ தெரிவித்துள்ளார்.
                 </p>
+
+
             </div>
 
             <div class="news1">
@@ -266,6 +320,7 @@
 
 
     <!-- footer  section-->
+
     <div class="footer">
 
         <div class="foot foot2">
@@ -309,7 +364,7 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
