--- a/pages/passt leaders/past leaders.html
+++ b/pages/passt leaders/past leaders.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/responsive.css">
+    <!-- <link rel="stylesheet" href="../../assets/css/responsive.css" type="text/css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons.p logo.jpg">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>pastleader</title>
@@ -819,7 +819,7 @@
             </tr>
             <tr>
                 <td scope="row">20</td>
-                <td>எம்.ஜி.ராமச்சந்திரன்
+                <td>
                     <div class="profile-main">
 
 
