--- a/pages/passt leaders/pastleader-profile/jayalalitha.html
+++ b/pages/passt leaders/pastleader-profile/jayalalitha.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../../assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../assets/css/responsive.css">
+    <!-- <link rel="stylesheet" href="../../../assets/css/responsive.css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../../assets/images/icons/p logo.jpg">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>past leaders</title>
