--- a/pages/portfolio/profile/duraimurugan.html
+++ b/pages/portfolio/profile/duraimurugan.html
@@ -6,14 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../../assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../assets/css/responsive.css">
+    <!-- <link rel="stylesheet" href="../../../assets/css/responsive.css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../../assets/images/icons/p logo.jpg">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>miisters</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@300;400;500;600;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@300;400;500;600;800;900&display=swap"
+        rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -52,24 +59,40 @@
         <!-- navbar1 -->
 
         <nav class="navbar navbar-expand-lg">
+
+
             <div class="container-fluid">
+
+
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+
                         <li class="nav-item pe-5">
                             <a class="nav-link active" aria-current="page" href="../../../index.html">முகப்பு</a>
                         </li>
+
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="../../portfolio/parties-profile.html">விவரம்</a>
                         </li>
+
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -80,9 +103,13 @@
                                 <li><a class="dropdown-item" href="../../manifesto/complte.html">நிறைவு</a></li>
                             </ul>
                         </li>
+
+
                         <li class="nav-item pe-5">
                             <a class="nav-link" href="../../passt leaders/past leaders.html">தலைவர்கள்</a>
                         </li>
+
+
                         <li class="nav-item dropdown pe-5">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -94,14 +121,25 @@
 
                             </ul>
                         </li>
+
+
                     </ul>
+
+
                 </div>
+
+
             </div>
+
+
         </nav>
+
+
     </div>
 
 
-    <button type="button" class="btn btn-outline-danger ms-2"><a class="text-center text-dark text-decoration-none" href="../potfolio.html">Back</a></button>
+    <button type="button" class="btn btn-outline-danger ms-2"><a class="text-center text-dark text-decoration-none"
+            href="../potfolio.html">Back</a></button>
 
 
 
@@ -300,10 +338,10 @@
         </div>
 
     </div>
-   
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
