--- a/pages/your opinion/join now thank.html
+++ b/pages/your opinion/join now thank.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../../assets/css/join now.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../assets/css/responsive.css">
+  <!-- <link rel="stylesheet" href="../../assets/css/responsive.css"> -->
   <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <title>portfolieo</title>
@@ -59,23 +59,39 @@
     <!-- navbar1 -->
 
     <nav class="navbar navbar-expand-lg">
+
+
       <div class="container-fluid">
+
+
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+
             <li class="nav-item pe-5">
               <a class="nav-link active" aria-current="page" href="../../index.html">முகப்பு</a>
             </li>
+
+
             <li class="nav-item pe-5">
               <a class="nav-link" href="../portfolio/parties-profile.html">விவரம்</a>
             </li>
+
+
             <li class="nav-item dropdown pe-5">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -86,9 +102,13 @@
                 <li><a class="dropdown-item" href="../manifesto/complte.html">நிறைவு</a></li>
               </ul>
             </li>
+
+
             <li class="nav-item pe-5">
               <a class="nav-link" href="../passt leaders/past leaders.html">தலைவர்கள்</a>
             </li>
+
+
             <li class="nav-item dropdown pe-5">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -99,29 +119,52 @@
                 <li><a class="dropdown-item" href="../more/mla.html">பிரதிநிதிகள்</a></li>
 
               </ul>
+
             </li>
+
+
           </ul>
+
+
         </div>
+
+
       </div>
+
+
     </nav>
+
+
   </div>
 
   <!-- start thanks page -->
 
   <div class="thanks">
+
+
     <h1>Thank You</h1>
+
     <p>Your Join was completled successfully.</p>
+
     <img src="../../assets/images/icons/icons8-done.svg" alt="">
+
     <div class="record">
+
       <img src="../../assets/images/icons/letter.png" width="60px" height="60px" alt=" error image">
       <p>An email recept incukding the detais about your join has been sent to your email address <br>provided. Please
         keep it for your records</p>
+
     </div>
+
     <button><a href="../../index.html">Continue</a></button>
+
+
   </div>
 
 
   <!-- footer  section-->
+
+
   <div class="footer">
 
     <div class="foot foot2">
