--- a/pages/your opinion/join now.html
+++ b/pages/your opinion/join now.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../../assets/css/join now.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../assets/css/responsive.css">
+  <!-- <link rel="stylesheet" href="../../assets/css/responsive.css"> -->
   <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <title>portfolieo</title>
@@ -26,15 +26,18 @@
 
 
 <body>
+
   <!-- navbar all -->
 
   <div class="totalnav">
 
     <div class="headvideo1">
+
       <video autoplay muted loop id="myVideo">
         <source src="../../assets/images/essecial/Pattern - 85590.mp4" type="video/mp4">
         <track default />
       </video>
+
     </div>
 
     <!-- navbar -->
@@ -59,23 +62,38 @@
     <!-- navbar1 -->
 
     <nav class="navbar navbar-expand-lg">
+
+
       <div class="container-fluid">
+
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+
             <li class="nav-item pe-5">
               <a class="nav-link active" aria-current="page" href="../../index.html">முகப்பு</a>
             </li>
+
+
             <li class="nav-item pe-5">
               <a class="nav-link" href="../portfolio/parties-profile.html">விவரம்</a>
             </li>
+
+
             <li class="nav-item dropdown pe-5">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -86,9 +104,13 @@
                 <li><a class="dropdown-item" href="../manifesto/complte.html">நிறைவு</a></li>
               </ul>
             </li>
+
+
             <li class="nav-item pe-5">
               <a class="nav-link" href="../passt leaders/past leaders.html">தலைவர்கள்</a>
             </li>
+
+
             <li class="nav-item dropdown pe-5">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -99,62 +121,124 @@
                 <li><a class="dropdown-item" href="../more/mla.html">பிரதிநிதிகள்</a></li>
 
               </ul>
+
             </li>
+
           </ul>
+
+
         </div>
+
+
       </div>
+
+
     </nav>
+
+
   </div>
+
 
   <!-- join page start -->
 
 
   <div class="joinpage">
+
+
     <h1>join Our Community:</h1>
+
+
     <form>
+
+
       <div class="mb-3">
+
+
         <label for="exampleInputname" class="form-label">Frist name:</label>
+
+
         <input type="text" class="form-control" id="exampleInputname" aria-describedby="emailHelp">
+
+
         <div id="emailHelp" class="form-text">We'll never share your ditails with anyone else.</div>
+
+
       </div>
+
+
+
       <div class="mb-3">
+
+
         <label for="exampleInputlname" class="form-label">Last name</label>
         <input type="text" class="form-control" id="exampleInputlname" aria-describedby="emailHelp">
+
+
       </div>
+
+
       <div class="mb-3">
+
+
         <label for="exampleInputnumber" class="form-label">Pone number</label>
         <input type="number" class="form-control" id="exampleInputnumber" aria-describedby="emailHelp">
         <div id="emailHelp" class="form-text">We'll never share your number with anyone else.</div>
+
+
       </div>
+
+
       <div class="mb-3">
+
+
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+
+
       </div>
+
+
       <div class="mb-3">
+
+
         <label for="exampleInputPassword1" class="form-label">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1">
+
+
       </div>
+
+
       <div class="mb-3">
+
+
         <label for="exampleInputbloger" class="form-label">you are bloger</label>
-        <!-- <input type="email" class="form-control" id="exampleInputbloger" aria-describedby="emailHelp"> -->
+
         <select class="form-select" aria-label="Default select example">
           <option selected>Enter your role </option>
           <option value="1">Bloger</option>
           <option value="2">User</option>
-      </select>
+        </select>
+
       </div>
+
+
       <div class="mb-3 form-check">
+
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
       </div>
+
       <button type="submit" class="btn btn-outline-success"><a href="../../index.html">Cancel</a></button>
       <button type="submit" class="btn btn-success"><a href="../your opinion/join now thank.html">Submit</a></button>
 
     </form>
+
+
   </div>
 
-  
+
 
 
   <!-- footer  section-->
@@ -162,49 +246,49 @@
 
     <div class="foot foot2">
 
-        <h1>அரசியல்</h1>
-        <p>
+      <h1>அரசியல்</h1>
+      <p>
 
 
-            வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை
-            ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
-        </p>
-        <img src="../../assets/images/icons/icon-facebook.svg" alt="error image">
-        <img src="../../assets/images/icons/icon-instagram.svg" alt="error image">
-        <img src="../../assets/images/icons/icon-pinterest.svg" alt="error image">
-        <img src="../../assets/images/icons/icon-twitter.svg" alt="error image">
+        வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை
+        ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
+      </p>
+      <img src="../../assets/images/icons/icon-facebook.svg" alt="error image">
+      <img src="../../assets/images/icons/icon-instagram.svg" alt="error image">
+      <img src="../../assets/images/icons/icon-pinterest.svg" alt="error image">
+      <img src="../../assets/images/icons/icon-twitter.svg" alt="error image">
 
     </div>
 
     <div class="foot1">
-        <h1>முக்கியமான தகவல்</h1>
-        <p>
-            எங்களை பற்றி</p>
-        <p>ஆண்டு அறிக்கைs</p>
-        <p>எங்கள் அணுகுமுறை</p>
-        <p>புள்ளிவிவரங்கள்</p>
+      <h1>முக்கியமான தகவல்</h1>
+      <p>
+        எங்களை பற்றி</p>
+      <p>ஆண்டு அறிக்கைs</p>
+      <p>எங்கள் அணுகுமுறை</p>
+      <p>புள்ளிவிவரங்கள்</p>
     </div>
 
     <div class="foot1 foot2">
-        <h1>முக்கியமான தகவல்</h1>
-        <p>
-            விரைவான தொடர்பு</p>
-        <p>
-            தன்னார்வ படிவம்</p>
-        <p>பதிவர்</p>
+      <h1>முக்கியமான தகவல்</h1>
+      <p>
+        விரைவான தொடர்பு</p>
+      <p>
+        தன்னார்வ படிவம்</p>
+      <p>பதிவர்</p>
     </div>
 
     <div class="foot1 foot2">
-        <h1>instagram </h1>
-        <p>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை</p>
+      <h1>instagram </h1>
+      <p>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை</p>
     </div>
 
-</div>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
 </body>
