--- a/pages/your opinion/join now.html
+++ b/pages/your opinion/join now.html
@@ -52,9 +52,9 @@
         <p class="contact"><a href="#">தொடர்பு</a></p>
         <p class="contact">|</p>
         <p class="contact"><a href="#">பின்னூட்டம்</a></p>
-        <p><a href="../../English-version/portfolio/potfolio-english.html">English</a></p>
+        <p><a href="../../English-version/your opinion/join now english.html">English</a></p>
         <p>|</p>
-        <p><a href="potfolio.html">தமிழ்</a></p>
+        <p><a href="join now.html">தமிழ்</a></p>
       </div>
 
     </div>
@@ -157,7 +157,7 @@
         <label for="exampleInputname" class="form-label">Frist name:</label>
 
 
-        <input type="text" class="form-control" id="exampleInputname" aria-describedby="emailHelp">
+        <input type="text" class="form-control" id="exampleInputname" aria-describedby="emailHelp" value="Balaji">
 
 
         <div id="emailHelp" class="form-text">We'll never share your ditails with anyone else.</div>
@@ -171,7 +171,7 @@
 
 
         <label for="exampleInputlname" class="form-label">Last name</label>
-        <input type="text" class="form-control" id="exampleInputlname" aria-describedby="emailHelp">
+        <input type="text" class="form-control" id="exampleInputlname" aria-describedby="emailHelp" value="S">
 
 
       </div>
@@ -181,7 +181,7 @@
 
 
         <label for="exampleInputnumber" class="form-label">Pone number</label>
-        <input type="number" class="form-control" id="exampleInputnumber" aria-describedby="emailHelp">
+        <input type="number" class="form-control" id="exampleInputnumber" aria-describedby="emailHelp" value="677979789675">
         <div id="emailHelp" class="form-text">We'll never share your number with anyone else.</div>
 
 
@@ -192,7 +192,7 @@
 
 
         <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="balajis007@gmail.com">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
 
 
@@ -203,7 +203,7 @@
 
 
         <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <input type="password" class="form-control" id="exampleInputPassword1" value="767564654gjb">
 
 
       </div>
@@ -285,7 +285,25 @@
 
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+
+  </script>
+
+  <script>
+    const fname = (document.getElementById("exampleInputname").value);
+    const lname = (document.getElementById("exampleInputlname").value);
+    const number = (document.getElementById("exampleInputnumber").value);
+    const email = (document.getElementById("exampleInputEmail1").value);
+    const password = (document.getElementById("exampleInputPassword1").value);
+
+
+    console.log(fname);
+    console.log(lname);
+    console.log(number);
+    console.log(email);
+    console.log(password);
+
+  </script>
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
