--- a/English-version/your opinion/join now english.html
+++ b/English-version/your opinion/join now english.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../../assets/css/join now.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../assets/css/responsive.css">
+  <!-- <link rel="stylesheet" href="../../assets/css/responsive.css"> -->
   <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <title>past leaders</title>
@@ -113,29 +113,42 @@
   <div class="joinpage">
     <h1>join Our Community:</h1>
     <form>
+
+
       <div class="mb-3">
         <label for="exampleInputname" class="form-label">Frist name:</label>
-        <input type="text" class="form-control" id="exampleInputname" aria-describedby="emailHelp">
+        <input type="text" class="form-control" id="exampleInputname" aria-describedby="emailHelp" value="balaji">
         <div id="emailHelp" class="form-text">We'll never share your ditails with anyone else.</div>
       </div>
+
+
       <div class="mb-3">
         <label for="exampleInputlname" class="form-label">Last name</label>
-        <input type="text" class="form-control" id="exampleInputlname" aria-describedby="emailHelp">
+        <input type="text" class="form-control" id="exampleInputlname" aria-describedby="emailHelp" value="S">
       </div>
+
+
       <div class="mb-3">
         <label for="exampleInputnumber" class="form-label">Pone number</label>
-        <input type="number" class="form-control" id="exampleInputnumber" aria-describedby="emailHelp">
+        <input type="number" class="form-control" id="exampleInputnumber" aria-describedby="emailHelp" value="767657489">
         <div id="emailHelp" class="form-text">We'll never share your number with anyone else.</div>
       </div>
+
+
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="balajis@gmail.com">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
       </div>
+
+
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <input type="password" class="form-control" id="exampleInputPassword1"
+        value="uhisdglkljas">
       </div>
+
+
       <div class="mb-3">
         <label for="exampleInputbloger" class="form-label">you are bloger</label>
         <!-- <input type="email" class="form-control" id="exampleInputbloger" aria-describedby="emailHelp"> -->
@@ -145,14 +158,21 @@
           <option value="2">User</option>
         </select>
       </div>
+
+
       <div class="mb-3 form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
       </div>
+
+
       <button type="submit" class="btn btn-outline-success"><a href="../home/homepage-english.html">Cancel</a></button>
-      <button type="submit" class="btn btn-success"><a href="join now thank english.html">Submit</a></button>
+     
 
     </form>
+    <button type="submit" class="btn btn-success" onclick="submit()">Submit</button>
+
+
   </div>
 
 
@@ -200,6 +220,33 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    
+    function submit() {
+      const fname = (document.getElementById("exampleInputname").value);
+    const lname = (document.getElementById("exampleInputlname").value);
+    const number = (document.getElementById("exampleInputnumber").value);
+    const email = (document.getElementById("exampleInputEmail1").value);
+    const password = (document.getElementById("exampleInputPassword1").value);
+
+
+    console.log(fname);
+    console.log(lname);
+    console.log(number);
+    console.log(email);
+    console.log(password);
+
+    localStorage.setItem("first_name", fname);
+    localStorage.setItem("last_name", lname);
+    localStorage.setItem("mobile_number", number);
+    localStorage.setItem("email_id", email);
+    localStorage.setItem("password", password);
+
+
+    window.location.href="profilepage_english.html";
+    }
+
+  </script>
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
