--- a/index.html
+++ b/index.html
@@ -5,369 +5,149 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
-    <link href="assets/css/main.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="assets/css/responsive.css" type="text/css"> -->
-    <link rel="icon" type="image/jpg" sizes="60x32" href="assets/images/icons/p logo.jpg">
-    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-    <title>politifact</title>
-
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@300;400;500;600;800;900&display=swap"
-        rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&display=swap"
-        rel="stylesheet">
-
-
+    <link rel="stylesheet" href="assets/css/join now.css">
+    <title>Document</title>
+    <style>
+       
+    </style>
 </head>
-
 
 <body>
 
 
-    <!-- background vidieo -->
-
-    <div class="headvideo">
-
-        <video autoplay muted loop id="myVideo">
+    <div class="container" id="container">
+        <div class="form-container sign-up-container">
 
 
-            <source src="assets/images/essecial/Flag - 117755.mp4" type="video/mp4">
-            <track default>
-        </video>
-
-
-    </div>
-
-    <!-- navbar all -->
-
-    <div class="totalnav">
-
-        <div class="headvideo1">
-
-            <video autoplay muted loop id="myVideo">
-                <source src="assets/images/essecial/Pattern - 85590.mp4" type="video/mp4">
-                <track default />
-            </video>
-
-        </div>
-
-        <!-- navbar -->
-
-        <div class="navbar">
-
-            <div class="topic">
-
-                <h1>POLITIFACT</h1>
-
-
-            </div>
-
-            <div class="topic1">
-
-
-                <p class="contact"><a href="pages/your opinion/join now.html">தொடர்பு</a></p>
-                <p class="contact">|</p>
-                <p class="contact"><a href="pages/your opinion/your opnion.html">பின்னூட்டம்</a></p>
-                <p><a href="English-version/home/homepage-english.html">English</a></p>
-                <p>|</p>
-                <p><a href="index.html">தமிழ்</a></p>
-
-
-            </div>
-
-        </div>
-
-        <!-- navbar1 -->
-
-        <nav class="navbar navbar-expand-lg">
-
-
-            <div class="container-fluid">
-
-
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-                        <li class="nav-item pe-5">
-                            <a class="nav-link active" aria-current="page" href="index.html">முகப்பு</a>
-                        </li>
-
-                        <li class="nav-item pe-5">
-                            <a class="nav-link" href="pages/portfolio/parties-profile.html">விவரம்</a>
-                        </li>
-
-                        <li class="nav-item dropdown pe-5">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                அறிக்கைகள்
-                            </a>
-                            <ul class="dropdown-menu bg-light">
-                                <li><a class="dropdown-item" href="pages/manifesto/bending.html">நிலுவை</a></li>
-                                <li><a class="dropdown-item" href="pages/manifesto/complte.html">நிறைவு</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="nav-item pe-5">
-                            <a class="nav-link" href="pages/passt leaders/past leaders.html">தலைவர்கள்</a>
-                        </li>
-
-                        <li class="nav-item dropdown pe-5">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                மேலும்
-                            </a>
-                            <ul class="dropdown-menu bg-light">
-                                <li><a class="dropdown-item" href="pages/more/Governer list.html">ஆளுநர்கள்</a></li>
-                                <li><a class="dropdown-item" href="pages/more/mla.html">பிரதிநிதிகள்</a></li>
-
-                            </ul>
-                        </li>
-
-
-                    </ul>
-
+            <form id="register">
+                <h1>Create Account</h1>
+                <div class="social-container">
+                    <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
+                <span>or use your email for registration</span>
+                <input type="text" id="exampleInputname" placeholder="Name" />
+                <input type="number" id="exampleInputnumber" placeholder="number" />
+                <input type="email" id="exampleInputEmail1" placeholder="Email" />
+                <input type="password" id="exampleInputPassword" placeholder="Password" />
+                <button type="submit" class="btn btn-success">Submit</button>
 
 
-            </div>
-
-        </nav>
-
-    </div>
-    <!-- section1 -->
+            </form>
 
 
-    <div class="section1 container">
-
-
-        <h1 class="h1 fs-3 fw-bolder text-center lh-base p-5">
-            சுதந்திரமாக வாழ்வது மனிதனின் உரிமை. <br>அதுபோலவே மற்றவர்களைச் சார்ந்து வாழ்வது அவன் கடமை.
-        </h1>
-
-        <p class="lh-lg fs-6 fw-bolder text-center">
-            தற்போதைய நிலையில் இருந்து உண்மையான மாற்றம் ஒரு<br> அரசியல்வாதியைத் தேர்ந்தெடுப்பதில் இருந்து ஒருபோதும்
-            வராது
-            - குறிப்பாக அதை வழிநடத்துபவர் அல்ல.<br>
-            அந்த நிலையை நிலைநிறுத்த அர்ப்பணிக்கப்பட்ட அந்தஸ்து கட்சி.
-        </p>
-
-
-        <button type="button" class="btn btn-outline-dark "><a class="text-center text-decoration-none"
-                href="pages/your opinion/your opnion.html">தங்களது கருத்து</a></button>
-
-    </div>
-
-    <!-- section2 -->
-
-    <div class="section2 d-flex flex-column justify-content-center align-items-center">
-
-        <h1 class="h1 text-center fs-5">அரசியலுக்கு வரவேற்கிறோம்</h1>
-
-        <img src="assets/images/essecial/Capture.PNG" class=" decoration img-fluid" alt="">
-
-        <div class="box d-flex">
-
-            <div class="content1 d-flex justify-content-center align-items-center flex-column">
-
-                <h2 class="h1">poltifact</h2>
-
-                <p class="p-3">
-                    பரஸ்பர சண்டை சச்சரவுகளைக் களைந்து, உயர்ந்தவர் தாழ்ந்தவர் என்ற வேறுபாட்டைக் களைந்து சமத்துவ
-                    உணர்வை
-                    வளர்த்து, தீண்டாமையை ஒழிக்க வேண்டும். ஆங்கிலேயர் ஆட்சிக்கு முன் இருந்த சுயராஜ்ஜியத்தை நாம்
-                    மீட்டெடுக்க வேண்டும். அதே தந்தையின் குழந்தைகளை நாம் விரும்ப வேண்டும்.
-                </p>
-
-            </div>
-
-            <div class="sideimage">
-
-                <img src="assets/images/essecial/motivation.jpg" class="img-fluid" alt="error image">
-
-            </div>
 
         </div>
 
-    </div>
-
-
-    <!-- section3 -->
-
-
-    <div class="section3">
-
-
-        <div class="content d-flex flex-column justify-content-center align-items-center p-5">
-
-            <p class="h4 fs-5 text-center text-danger fw-bolder lh-base">எங்கள் பிரச்சாரம் இயக்கப்படுகிறது<br>
-                உங்களைப் போன்ற ஆதரவாளர்களின் பங்களிப்புகளால்
-            </p>
-
-            <hr>
-
-            <h1 class="h2 fs-4 text-center text-dark fw-bold pb-5"><span>ஒரு தன்னார்வலராக</span> மாறுங்கள்</h1>
-
-            <h2 class="h2 fs-6 text-center text-dark lh-base pb-3">நீங்கள் அரசியலில் ஆர்வம் காட்டவில்லை என்பதற்காக<br>
-                நீங்கள் அரசாங்கத்தை மாற்ற விரும்புகிறீர்கள்
-                என்று
-                அர்த்தமல்ல.
-            </h2>
-            <button type="button" class="btn btn-outline-dark p-2 "><a class="text-center text-decoration-none"
-                    href="pages/your opinion/join now.html">இப்போது சேரவும்</a></button>
-
+        <div class="form-container sign-in-container">
+            <form  id="checkregister">
+                <h1>Sign in</h1>
+                <div class="social-container">
+                    <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <span>or use your account</span>
+                <input type="email" id="username" placeholder="Email" />
+                <input type="password" id="password" placeholder="Password" />
+                <a href="#">Forgot your password?</a>
+                <button type="submit">Sign In</button>
+            </form>
         </div>
-
-
-        <!-- section4 -->
-
-        <div class="section4 d-flex justify-content-between">
-
-            <div class="num1">
-                <h1 class="h1 fs-2 text-center pb-3">0k</h1>
-                <p class="text-center text-uppercase">active Volunteer</p>
+        <div class="overlay-container">
+            <div class="overlay">
+                <div class="overlay-panel overlay-left">
+                    <h1>Hello futures</h1>
+                    <p>To keep connected with us please login with your personal info</p>
+                    <button class="ghost" id="signIn">Sign In</button>
+                </div>
+                <div class="overlay-panel overlay-right">
+                    <h1>Welcome To Politifact</h1>
+                    <p>Enter your personal details and start journey with us</p>
+                    <button class="ghost" id="signUp">Sign Up</button>
+                </div>
             </div>
-
-            <hr class="border border-danger border-2 opacity-50">
-
-            <div class="num1 ">
-                <h1 class="h1 fs-1 text-center pb-3">131</h1>
-                <p class="text-center text-uppercase">campage now</p>
-            </div>
-
-            <hr class="border border-danger border-2 opacity-50">
-
-            <div class="num1">
-                <h1 class="h1 fs-1 text-center pb-3">612</h1>
-                <p class="text-center text-uppercase">area coverage</p>
-            </div>
-
-            <hr class="project border border-danger border-2 opacity-50">
-
-
-            <div class="project num1">
-                <h1 class="h1 fs-1 text-center pb-3">2</h1>
-                <p class="text-center text-uppercase">project done</p>
-            </div>
-
-        </div>
-
-    </div>
-
-
-    <!-- section5 -->
-
-    <div class="section5">
-
-        <h2 class="head">சமீபத்திய அரசியல் செய்திகள்</h2>
-
-        <div class="news d-flex justify-content-around">
-
-            <div class="news1">
-
-
-                <img src="assets/images/ministers/news3.jpg" class="img-fluid" alt="error image">
-                <h2>அரசியல்</h2>
-                <p>
-                    சினிமாவில் காவி நிறம் அணியக் கூடாது என்றால், கறுப்பு ஆடைகள் அணிந்து வில்லனாக நடிப்பதால்
-                    திராவிடர் கழகத்தினர் எல்லாம் வில்லன்களா? என மதிமுக தலைமை நிலைய செயலாளர் துரை வைகோ கேள்வி
-                    எழுப்பியுள்ளார். வாரிசு அரசியல் பற்றிப் பேச பாஜக மாநிலத் தலைவர் அண்ணாமலைக்கு தகுதியே இல்லை,
-                    அவரது கட்சியிலேயே பலரது வாரிசுகள் பொறுப்புகளில் இருக்கிறார்கள் என துரை வைகோ தெரிவித்துள்ளார்.
-                </p>
-
-
-            </div>
-
-            <div class="news1">
-                <img src="assets/images/ministers/news2.jpg" class="img-fluid" alt="error image">
-                <h2>அரசியல்</h2>
-                <p>தமிழ்நாடு அமைச்சரவையில் பெரும் எதிர்பார்ப்பிற்கு இடையில் பல்வேறு மாற்றங்கள் செய்யப்பட்டு உள்ளன.
-                    முதல்வர் ஸ்டாலினின் ஒரு இலாக்காவையும் சேர்த்து மொத்தமாக 11 அமைச்சர்களின் இலாக்காக்கள்
-                    மாற்றப்பட்டு உள்ளன. உதயநிதி ஸ்டாலினுக்கு இளைஞர் நலன், விளையாட்டுத்துறை வழங்கப்பட்டு உள்ளது.
-                    அதேபோல் சிறப்பு திட்ட செயலாக்கம் துறை வழங்கப்பட்டு உள்ளது.</p>
-            </div>
-
-            <div class="news1">
-                <img src="assets/images/ministers/news1.jpg" class="img-fluid" alt="error image">
-                <h2>அரசியல்</h2>
-                <p>சென்னை: கட்சித் தலைமை ஒரு குடும்பத்திடம் மட்டும் தொடர்வதுதான் வாரிசு அரசியல், பாஜகவில் இருப்பது
-                    வாரிசு அரசியல் அல்ல.. முதல்வர் ஸ்டாலின் பட்டியலினத்தை சேர்ந்தவரை துணை முதலமைச்சராக்க வேண்டும்.
-                    என்று பாஜக எம்எல்ஏ வானதி சீனிவாசன் தெரிவித்துள்ளார்.</p>
-            </div>
-
         </div>
     </div>
 
 
-    <!-- footer  section-->
-
-    <div class="footer">
-
-        <div class="foot foot2">
-
-            <h1>அரசியல்</h1>
-            <p>
+    <script>
 
 
-                வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை
-                ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
-            </p>
-            <img src="assets/images/icons/icon-facebook.svg" alt="error image">
-            <img src="assets/images/icons/icon-instagram.svg" alt="error image">
-            <img src="assets/images/icons/icon-pinterest.svg" alt="error image">
-            <img src="assets/images/icons/icon-twitter.svg" alt="error image">
+        const registerr = document.getElementById("register");
 
-        </div>
-
-        <div class="foot1">
-            <h1>முக்கியமான தகவல்</h1>
-            <p>
-                எங்களை பற்றி</p>
-            <p>ஆண்டு அறிக்கைs</p>
-            <p>எங்கள் அணுகுமுறை</p>
-            <p>புள்ளிவிவரங்கள்</p>
-        </div>
-
-        <div class="foot1 foot2">
-            <h1>முக்கியமான தகவல்</h1>
-            <p>
-                விரைவான தொடர்பு</p>
-            <p>
-                தன்னார்வ படிவம்</p>
-            <p>பதிவர்</p>
-        </div>
-
-        <div class="foot1 foot2">
-            <h1>instagram </h1>
-            <p>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை</p>
-        </div>
-
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        registerr.onsubmit = e => {
 
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+            const fname = (document.getElementById("exampleInputname").value);
+            //   const lname = (document.getElementById("exampleInputlname").value);
+            const number = (document.getElementById("exampleInputnumber").value);
+            const email = (document.getElementById("exampleInputEmail1").value);
+            const password = (document.getElementById("exampleInputPassword").value);
+
+            let record = [];
+
+
+            let user = {};
+
+
+            user["first_name"] = fname,
+                // user["last_name"] = lname,
+                user["mobile_number"] = number,
+                user["email"] = email,
+                user["password"] = password;
+
+
+
+            let users = JSON.parse(localStorage.getItem('users')) || record;
+            users.push(user);
+            localStorage.setItem('users', JSON.stringify(users));
+        }
+
+        const checkr = document.getElementById("checkregister");
+
+        checkr.onsubmit = e => {
+
+            let email = document.getElementById("username").value;
+            let password = document.getElementById("password").value;
+            let localUsers = JSON.parse(localStorage.getItem("users"));
+
+            if (!localUsers) {
+                alert("Login Failure");
+                return;
+            }
+
+            let Success = false;
+            for (let i = 0; i < localUsers.length; i++) {
+                if (localUsers[i].email === email && localUsers[i].password === password) {
+                    Success = true;
+                    break;
+                }
+            }
+
+            if (Success) {
+                alert("Login Success");
+            } else {
+                alert("Login Failure");
+            }
+        }
+        const signUpButton = document.getElementById('signUp');
+        const signInButton = document.getElementById('signIn');
+        const container = document.getElementById('container');
+
+        signUpButton.addEventListener('click', () => {
+            container.classList.add("right-panel-active");
+        });
+
+        signInButton.addEventListener('click', () => {
+            container.classList.remove("right-panel-active");
+        });
+
+    //   window.location.href = "profilepage.html"
+
+    </script>
 </body>
 
 </html>
